[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-ai-sdk-adapter"
version = "0.1.2"
description = "Python port of @ai-sdk/langchain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=0.3.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]

[dependency-groups]
dev = [
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.4",
    "langgraph>=1.1.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.2.2",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_ai_sdk_adapter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["langchain_ai_sdk_adapter"]
